--- a/private_dot_config/kitty/kitty.conf
+++ b/private_dot_config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family Fira Code
+font_family CommitMono
 ###########################################################
 # Symbols Nerd Font complete symbol_map
 # easily troubleshoot missing/incorrect characters with:
@@ -51,6 +51,7 @@ symbol_map U+e300-U+e3eb Symbols Nerd Font
 
 # Misc Code Point Fixes
 symbol_map U+21B5,U+25B8,U+2605,U+2630,U+2632,U+2714,U+E0A3,U+E615,U+E62B Symbols Nerd Font
+symbol_map U+2600-U+26FF Symbols Nerd Font
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -68,7 +69,7 @@ symbol_map U+21B5,U+25B8,U+2605,U+2630,U+2632,U+2714,U+E0A3,U+E615,U+E62B Symbol
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-# font_size 11.0
+font_size 11.5
 
 #: Font size (in pts)
 
@@ -137,7 +138,7 @@ symbol_map U+21B5,U+25B8,U+2605,U+2630,U+2632,U+2714,U+E0A3,U+E615,U+E62B Symbol
 #: implemented using the calt OpenType feature. For disabling general
 #: ligatures, use the font_features option.
 
-# font_features
+font_features CommitMono +liga +kern
 
 #: E.g. font_features none
 
@@ -212,7 +213,7 @@ symbol_map U+21B5,U+25B8,U+2605,U+2630,U+2632,U+2714,U+E0A3,U+E615,U+E62B Symbol
 #: placed in the cell. For example::
 
 #:     modify_font cell_width 80%
-#:     modify_font cell_height -2px
+     modify_font cell_height 2px
 #:     modify_font baseline 3
 
 #: Note that modifying the baseline will automatically adjust the
@@ -1124,7 +1125,7 @@ copy_on_select yes
 
 #: The foreground and background colors.
 
-background_opacity 1.0
+# background_opacity 1.0
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1148,7 +1149,7 @@ background_opacity 1.0
 #: this option when reloading the config will only work if
 #: dynamic_background_opacity was enabled in the original config.
 
-background_blur 50
+# background_blur 50
 
 #: Set to a positive value to enable background blur (blurring of the
 #: visuals behind a transparent window) on platforms that support it.
@@ -1160,16 +1161,16 @@ background_blur 50
 #: platform implements it, so use with care. Currently supported on
 #: macOS and KDE/X11.
 
-background_image /Users/inust/Downloads/ai.jpeg
+#background_image /Users/inust/Downloads/snow_mountain.png
 #: Path to a background image. Must be in PNG format.
 
-background_image_layout mirror-tiled
+# background_image_layout mirror-tiled
 #: Whether to tile, scale or clamp the background image. The value can
 #: be one of tiled, mirror-tiled, scaled, clamped, centered or
 #: cscaled. The scaled and cscaled values scale the image to the
 #: window size, with cscaled preserving the image aspect ratio.
 
-background_image_linear yes
+# background_image_linear yes
 
 #: When background image is scaled, whether linear interpolation
 #: should be used.
@@ -1181,7 +1182,7 @@ background_image_linear yes
 #: decrease_background_opacity) or the remote control facility.
 #: Changing this option by reloading the config is not supported.
 
-background_tint 0.8
+# background_tint 0.8
 
 # : How much to tint the background image by the background color. This
 #: option makes it easier to read the text. Tinting is done using the
@@ -1189,14 +1190,14 @@ background_tint 0.8
 #: if background_opacity is set and transparent windows are supported
 #: or background_image is set.
 
- background_tint_gaps 0.8
+ # background_tint_gaps 0.8
 
 #: How much to tint the background image at the window gaps by the
 #: background color, after applying background_tint. Since this is
 #: multiplicative with background_tint, it can be used to lighten the
 #: tint over the window gaps for a *separated* look.
 
-dim_opacity 0.3
+# dim_opacity 0.3
 
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
@@ -1289,7 +1290,6 @@ dim_opacity 0.3
 #: Advanced {{{
 
 shell /opt/homebrew/bin/nu
-
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
 #: Note that on macOS if you change this, you might need to add
@@ -1754,9 +1754,6 @@ editor /opt/homebrew/bin/nvim
 
 # kitty_mod ctrl+shift
 
-map LEFT_SUPER LEFT_CONTROL
-
-
 #: Special modifier key alias for default shortcuts. You can change
 #: the value of this option to alter all default shortcuts that use
 #: kitty_mod.
@@ -1806,7 +1803,6 @@ map LEFT_SUPER LEFT_CONTROL
 #::  send an interrupt otherwise. Similarly,
 #::  copy_and_clear_or_interrupt will copy and clear the selection or
 #::  send an interrupt if there is no selection.
-
 
 #: Paste from clipboard
 
@@ -2449,6 +2445,6 @@ map LEFT_SUPER LEFT_CONTROL
 
 
 # BEGIN_KITTY_THEME
-# Gruvbox Material Light Hard
+# Tokyo Night
 include current-theme.conf
 # END_KITTY_THEME
