--- a/private_dot_config/starship.toml
+++ b/private_dot_config/starship.toml
@@ -58,8 +58,6 @@ format = '\[[$symbol$account(@$domain)(\($region\))]($style)\]'
 [git_branch]
 format = '\[[$symbol$branch]($style)\]'
 
-[git_status]
-format = '([\[$all_status$ahead_behind\]]($style))'
 
 [git_commit]
 commit_hash_length = 8
@@ -79,6 +77,11 @@ format = '[[+$added]($added_style)/[-$deleted]($deleted_style)]'
 format = '[\($state( $progress_current of $progress_total)\)]($style) '
 cherry_pick = '[🍒 PICKING](bold red)'
 
+[git_status]
+ahead = '⇡${count}'
+diverged = '⇕⇡${ahead_count}⇣${behind_count}'
+behind = '⇣${count}'
+format = '([\[$all_status$ahead_behind\]]($style))'
 
 [golang]
 format = '\[[$symbol($version)]($style)\]'
