Update .config/nvim.bak/LICENSE Update .config/nvim.bak/.git/config Update .config/nvim.bak/.git/index Update .config/nvim.bak/.git/logs/HEAD Update .config/nvim.bak/.git/logs/refs/heads/main Update .config/nvim.bak/.git/refs/heads/main Update .config/nvim.bak/.gitignore Update .config/nvim.bak/.neoconf.json Update .config/nvim.bak/init.lua Update .config/nvim.bak/lazy-lock.json Update .config/nvim.bak/lazyvim.json Update .config/nvim.bak/lua/config/keymaps.lua Update .config/nvim.bak/lua/config/lazy.lua Update .config/nvim.bak/lua/plugins/neo-tree.lua Update .config/nvim.bak/lua/plugins/others.lua Update .config/nvim.bak/lua/plugins/rust.lua Update .config/nvim.bak/lua/plugins/telescope.lua Update .config/nvim/LICENSE Update .config/nvim/.git/config Update .config/nvim/.git/index Update .config/nvim/.git/logs/HEAD Update .config/nvim/.git/logs/refs/heads/main Update .config/nvim/.git/refs/heads/main Update .config/nvim/.gitignore Update .config/nvim/.neoconf.json Update .config/nvim/init.lua Update .config/nvim/lua/plugins/neo-tree.lua Update .config/nvim/lua/plugins/telescope.lua Change attributes of .config/nvim.bak/.git/FETCH_HEAD Change attributes of .config/nvim/.git/FETCH_HEAD

--- a/private_dot_config/nvim/dot_git/config
+++ b/private_dot_config/nvim/dot_git/config
@@ -6,5 +6,8 @@
 	ignorecase = true
 	precomposeunicode = true
 [remote "origin"]
-	url = git@github.com:inudev5/lazyvim_config.git
-	fetch = +refs/heads/*:refs/remotes/origin/*
+	url = https://github.com/AstroNvim/AstroNvim
+	fetch = +refs/heads/main:refs/remotes/origin/main
+[branch "main"]
+	remote = origin
+	merge = refs/heads/main
