Update .config/hypr/UserConfigs/Startup_Apps.conf Update .config/hypr/UserConfigs/UserSettings.conf Update .config/hypr/UserConfigs/WindowRules.conf Update .config/nushell/history.txt Update .config/qt5ct/qt5ct.conf Update .config/qt6ct/qt6ct.conf Update .config/wezterm/wezterm.lua

--- a/private_dot_config/hypr/UserConfigs/WindowRules.conf
+++ b/private_dot_config/hypr/UserConfigs/WindowRules.conf
@@ -36,12 +36,12 @@ windowrulev2 = workspace 9 silent, class:^([Aa]udacious)$
 windowrulev2 = opacity 0.9 0.6, class:^([Rr]ofi)$
 windowrulev2 = opacity 0.9 0.7, class:^(Brave-browser)$
 windowrulev2 = opacity 0.9 0.7, class:^(Brave-browser-dev)$
-windowrulev2 = opacity 0.9 0.7, class:^(firefox)$
+windowrulev2 = opacity 1.0 1.0, class:^(firefox)$
 windowrulev2 = opacity 0.9 0.7, class:^(Firefox-esr)$
 windowrulev2 = opacity 0.9 0.8, class:^([Tt]hunar)$
 windowrulev2 = opacity 0.8 0.6, class:^(pcmanfm-qt)$
 windowrulev2 = opacity 0.9 0.7, class:^(gedit)$
-windowrulev2 = opacity 0.9 0.8, class:^(kitty)$
+windowrulev2 = opacity 1.0 1.0, class:^(wezterm)$
 windowrulev2 = opacity 0.9 0.7, class:^(mousepad)$
 windowrulev2 = opacity 0.9 0.7, class:^(codium-url-handler)$
 windowrulev2 = opacity 0.9 0.7, class:^(VSCodium)$
