--- a/private_dot_config/hypr/UserConfigs/UserSettings.conf
+++ b/private_dot_config/hypr/UserConfigs/UserSettings.conf
@@ -107,11 +107,12 @@ input {
 
   touchpad {
     disable_while_typing=1
-    natural_scroll=0 
+    natural_scroll=1 
     clickfinger_behavior=0
     middle_button_emulation=1
     tap-to-click=1
     drag_lock=0
+    scroll_factor=0.2
           }
 }
 
