--- a/private_dot_config/qt6ct/qt6ct.conf
+++ b/private_dot_config/qt6ct/qt6ct.conf
@@ -1,7 +1,7 @@
 [Appearance]
-color_scheme_path=$HOME/.config/qt6ct/colors/Tokyo-Night.conf
+color_scheme_path=/home/inu/.config/qt6ct/colors/Tokyo-Night.conf
 custom_palette=true
-icon_theme=TokyoNight-Tokyonight-Dark
+icon_theme=Tokyonight-Dark
 standard_dialogs=default
 style=kvantum
 
