--- a/private_dot_config/hypr/configs/Keybinds.conf
+++ b/private_dot_config/hypr/configs/Keybinds.conf
@@ -72,13 +72,13 @@ bind = , xf86audiostop, exec, $scriptsDir/MediaCtrl.sh --stop
 
 # Screenshot keybindings NOTE: You may need to press Fn key as well
 bind = $mainMod, Print, exec, $scriptsDir/ScreenShot.sh --now
-bind = $mainMod SHIFT, Print, exec, $scriptsDir/ScreenShot.sh --area
+bind = SHIFT $mainMod, 4, exec, $scriptsDir/ScreenShot.sh --area
 bind = $mainMod CTRL, Print, exec, $scriptsDir/ScreenShot.sh --in5 #screenshot in 5 secs
 bind = $mainMod ALT, Print, exec, $scriptsDir/ScreenShot.sh --in10 #screenshot in 10 secs
 bind = ALT, Print, exec, $scriptsDir/ScreenShot.sh --active #screenshot in 10 secs
 
 # screenshot with swappy (another screenshot tool)
-bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | swappy -f -
+bind = SHIFT $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f -
 
 # Resize windows
 binde = $mainMod SHIFT, left, resizeactive,-50 0
