Update .config/nushell/config.nu Update .config/nvim/lazy-lock.json Update .config/spotifyd/spotifyd.conf Update install_packages.sh

--- a/private_dot_config/spotifyd/spotifyd.conf
+++ b/private_dot_config/spotifyd/spotifyd.conf
@@ -2,8 +2,8 @@
 username = "31p6kojwxm5r4vr4vnls7oqwptzi"
 password = "3251in8458"
 backend = "alsa"
-device_name = "fedora_asahi"
-control = "fedora_asahi"
+# device_name = "fedora_asahi"
+# control = "fedora_asahi"
 volume_controller = "alsa"
 bitrate = 320
 cache_path = "/home/inu/.cache/spotifyd"
