Update .config/starship.toml Change attributes of chezmoi.toml

--- a/private_dot_config/starship.toml
+++ b/private_dot_config/starship.toml
@@ -7,7 +7,11 @@ format = '\[[$time]($style)\]'
 
 [username]
 show_always = true
-format = '\[[$user]($style)\] '
+format = '\[[$user]($style)'
+
+[hostname]
+ssh_only = false
+format = '@[$ssh_symbol](bold blue)[$hostname](bold yellow)\] '
 
 [character]
 vimcmd_symbol = '[V](bold green) '
