Update .config/hypr/UserConfigs/UserSettings.conf Update .config/hypr/hyprland.conf Update .config/kitty/kitty.conf Update .config/nvim/lazy-lock.json

--- a/private_dot_config/kitty/kitty.conf
+++ b/private_dot_config/kitty/kitty.conf
@@ -1,12 +1,12 @@
 #include ~/.cache/wal/colors-kitty.conf
 
-font_family     Fira Code SemiBold
-font_size 	    13.0
+font_family     Berkeley Mono
+font_size 	    10.0
 bold_font       auto
 italic_font      auto
 bold_italic_font auto
-
-background_opacity 0.7
+modify_font cell_height 5px
+background_opacity 0.9
 
 confirm_os_window_close 0
 
