--- a/private_dot_config/hypr/configs/Keybinds.conf
+++ b/private_dot_config/hypr/configs/Keybinds.conf
@@ -81,10 +81,10 @@ bind = ALT, Print, exec, $scriptsDir/ScreenShot.sh --active #screenshot in 10 se
 bind = SHIFT $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f -
 
 # Resize windows
-binde = $mainMod SHIFT, left, resizeactive,-50 0
-binde = $mainMod SHIFT, right, resizeactive,50 0
-binde = $mainMod SHIFT, up, resizeactive,0 -50
-binde = $mainMod SHIFT, down, resizeactive,0 50
+binde = $mainMod SHIFT, h, resizeactive,-50 0
+binde = $mainMod SHIFT, l, resizeactive,50 0
+binde = $mainMod SHIFT, k, resizeactive,0 -50
+binde = $mainMod SHIFT, j, resizeactive,0 50
 
 # Move windows
 bind = $mainMod CTRL, left, movewindow, l
@@ -154,4 +154,4 @@ bind = $mainMod, comma, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+bindm = $mainMod SHIFT, mouse:272, resizewindow
