Update .config/hypr/configs/Keybinds.conf Update .config/nvim/init.lua Update .config/nvim/lazy-lock.json Update .config/nvim/lazyvim.json Update .config/nvim/lua/plugins/others.lua

--- a/private_dot_config/hypr/configs/Keybinds.conf
+++ b/private_dot_config/hypr/configs/Keybinds.conf
@@ -80,12 +80,16 @@ bind = ALT, Print, exec, $scriptsDir/ScreenShot.sh --active #screenshot in 10 se
 # screenshot with swappy (another screenshot tool)
 bind = SHIFT $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f -
 
+bind = CTRL, R, submap, resize
+submap = resize
 # Resize windows
 binde = $mainMod SHIFT, h, resizeactive,-50 0
 binde = $mainMod SHIFT, l, resizeactive,50 0
 binde = $mainMod SHIFT, k, resizeactive,0 -50
 binde = $mainMod SHIFT, j, resizeactive,0 50
-
+bind = , escape, submap, reset 
+# will reset the submap, meaning end the current one and return to the global one
+submap = reset
 # Move windows
 bind = $mainMod CTRL, left, movewindow, l
 bind = $mainMod CTRL, right, movewindow, r
