--- a/dot_cargo/config.toml
+++ b/dot_cargo/config.toml
@@ -1,3 +1,3 @@
 [target.aarch64-apple-darwin]
 linker = "clang"
-rustflags = ["-Clink-arg=-fuse-ld=/usr/local/bin/ld64.sold"]
+# rustflags = ["-Clink-arg=-fuse-ld=/usr/local/bin/ld64.sold"]
