--- a/private_dot_config/hypr/UserConfigs/Startup_Apps.conf
+++ b/private_dot_config/hypr/UserConfigs/Startup_Apps.conf
@@ -36,11 +36,11 @@ exec-once = wl-paste --type image --watch cliphist store
 exec-once = $UserScripts/RainbowBorders.sh
 
 # sway-idle with lock only
-exec-once = swayidle -w timeout 900 '$lock'
+exec-once = hypridle -w timeout 900 '$lock'
 # sway-idle with lock and sleep
-#exec-once = swayidle -w timeout 900 '$lock' timeout 1200 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep '$lock'
+#exec-once = hypridle -w timeout 900 '$lock' timeout 1200 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep '$lock'
 # sway idle without lock
-#exec-once = swayidle -w  timeout 900 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
+#exec-once = hypridle -w  timeout 900 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
 
 # # Here are list of features available but disabled by default
 #exec-once = swww query || swww init && swww img $HOME/Pictures/wallpapers/mecha-nostalgia.png  # persistent wallpaper
