--- a/private_dot_config/hypr/UserConfigs/Startup_Apps.conf
+++ b/private_dot_config/hypr/UserConfigs/Startup_Apps.conf
@@ -35,11 +35,11 @@ exec-once = wl-paste --type image --watch cliphist store
 # Rainbow borders
 exec-once = $UserScripts/RainbowBorders.sh
 
-# sway-idle with lock only
+# hypr idle with lock only
 exec-once = hypridle -w timeout 900 '$lock'
-# sway-idle with lock and sleep
+# hypr idle with lock and sleep
 #exec-once = hypridle -w timeout 900 '$lock' timeout 1200 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep '$lock'
-# sway idle without lock
+# hypr idle without lock
 #exec-once = hypridle -w  timeout 900 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
 
 # # Here are list of features available but disabled by default
