--- a/private_dot_config/hypr/UserConfigs/UserSettings.conf
+++ b/private_dot_config/hypr/UserConfigs/UserSettings.conf
@@ -16,14 +16,14 @@ dwindle {
 }
 
 master {
-  new_status=master
+  # new_status=master
   new_on_top=1
   mfact = 0.5
 }
 
 general {
-  sensitivity=1.00
-  apply_sens_to_raw=1
+  # sensitivity=1.00
+  # apply_sens_to_raw=1
   gaps_in = 2
   gaps_out = 2
   border_size = 2
@@ -133,7 +133,7 @@ misc {
   mouse_move_enables_dpms = true
   #vrr = 0
   enable_swallow = true
-  no_direct_scanout = true #for fullscreen games
+  # no_direct_scanout = true #for fullscreen games
   focus_on_activate = false
   swallow_regex = ^(kitty)$
   #disable_autoreload = true
