--- a/private_dot_config/hypr/UserConfigs/UserSettings.conf
+++ b/private_dot_config/hypr/UserConfigs/UserSettings.conf
@@ -50,7 +50,7 @@ input {
 
   touchpad {
     disable_while_typing = true
-    natural_scroll = false 
+    natural_scroll = true 
     clickfinger_behavior = false
     middle_button_emulation = true
     tap-to-click = true
