Update README.md Update .config/hypr/UserConfigs/UserSettings.conf Update .config/nvim/init.lua Update .config/nvim/lazy-lock.json Update .config/nvim/lazyvim.json Update .config/nvim/lua/config/autocmds.lua Update .config/nvim/lua/plugins/conform.lua Update .config/nvim/lua/plugins/others.lua Update .config/zed/settings.json

--- a/private_dot_config/zed/private_settings.json
+++ b/private_dot_config/zed/private_settings.json
@@ -7,7 +7,7 @@
 // custom settings, run the `open default settings` command
 // from the command palette or from `Zed` application menu.
 {
-  "theme": "Catppuccin Macchiato",
+  "theme": "Tokyo Night",
   "vim_mode": true,
   "copilot": {
     "disabled_globs": [".env"]
@@ -37,6 +37,10 @@
     "copilot": true
   },
   "assistant": {
+    "default_model": {
+      "provider": "copilot_chat",
+      "model": "gpt-4"
+    },
     "default_open_ai_model": "gpt-4-1106-preview",
     "version": "2"
   },
