Update .config/Kvantum/kvantum.kvconfig Update .config/hypr/UserConfigs/00-Readme Update .config/hypr/UserConfigs/UserSettings.conf Update .config/hypr/UserScripts/00-Readme Update .config/hypr/UserScripts/QuickEdit.sh Update .config/hypr/UserScripts/RainbowBorders.sh Update .config/hypr/UserScripts/WallpaperRandom.sh Update .config/hypr/UserScripts/WallpaperSelect.sh Update .config/hypr/UserScripts/ZshChangeTheme.sh Update .config/hypr/configs/Keybinds.conf Update .config/hypr/initial-boot.sh Update .config/hypr/hyprland.conf Update .config/hypr/scripts/DarkLight.sh Update .config/hypr/scripts/KeyHints.sh Update .config/hypr/scripts/Polkit.sh Update .config/hypr/scripts/PortalHyprland.sh Update .config/hypr/scripts/Refresh.sh Update .config/hypr/scripts/RefreshNoWaybar.sh Update .config/hypr/scripts/WaybarCava.sh Update .config/hypr/scripts/Wlogout.sh Update .config/kitty/kitty.conf Update .config/nvim/lazy-lock.json Update .config/rofi/config-compact.rasi Update .config/rofi/config-wallpaper.rasi Update .config/rofi/config-waybar-style.rasi Update .config/rofi/config-zsh-theme.rasi Update .config/rofi/config.rasi Update .config/rofi/resolution/1080p/config.rasi Update .config/rofi/resolution/1440p/config.rasi Update .config/waybar/configs/[BOT & Left] SouthWest Update .config/waybar/configs/[BOT & Right] SouthEast Update .config/waybar/configs/[BOT] Camellia Update .config/waybar/configs/[BOT] Chrysanthemum Update .config/waybar/configs/[BOT] Default Laptop Update .config/waybar/configs/[BOT] Gardenia Update .config/waybar/configs/[BOT] Peony Update .config/waybar/configs/[BOT] Sleek Update .config/waybar/configs/[Left] WestWing Update .config/waybar/configs/[Right] EastWing Update .config/waybar/configs/[TOP & BOT] SummitSplit Update .config/waybar/configs/[TOP & Left] NorthWest Update .config/waybar/configs/[TOP & Right] NorthEast Update .config/waybar/configs/[TOP] Camellia Update .config/waybar/configs/[TOP] Chrysanthemum Update .config/waybar/configs/[TOP] De

--- a/private_dot_config/hypr/UserConfigs/UserSettings.conf
+++ b/private_dot_config/hypr/UserConfigs/UserSettings.conf
@@ -28,7 +28,7 @@ general {
   resize_on_border = true
    
   col.active_border = $color12 
-  col.inactive_border = $backgroundCol
+  col.inactive_border = $background
   
   layout = dwindle
 }
