--- a/dot_cargo/config.toml
+++ b/dot_cargo/config.toml
@@ -1,3 +1,7 @@
 [target.aarch64-apple-darwin]
 linker = "clang"
 # rustflags = ["-Clink-arg=-fuse-ld=/usr/local/bin/ld64.sold"]
+#
+[target.x86_64-unknown-linux-musl]
+linker = "x86_64-linux-musl-gcc"
+
